force-app/main/default/objects/Indurty__c/Indurty__c.object-meta.xml
<CustomObject>
    <label>Industry</label>
    <nameField>
        <label>Indurty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>