force-app/main/default/objects/Indurty__c/fields/Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_Name__c</fullName>
    <formula>if( WEEKDAY( Date__c )==1,&quot;Sunday&quot;,
  if(WEEKDAY( Date__c )==2,&quot;Monday&quot;,
    if(WEEKDAY( Date__c )==3,&quot;Tuesday&quot;,
      if(WEEKDAY( Date__c )==4,&quot;Wednesday&quot;,
        if(WEEKDAY( Date__c )==5,&quot;Thursday&quot;,
          if(WEEKDAY( Date__c )==6,&quot;Friday&quot;,&quot;Saturday&quot;))))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Name</label>
    <type>Text</type>
</CustomField>