force-app/main/default/objects/Indurty__c/fields/My_Formula__c.field-meta.xml
<CustomField>
    <fullName>My_Formula__c</fullName>
    <formula>rPAD( Name , 25, &quot;sar&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Formula</label>
    <type>Text</type>
</CustomField>