force-app/main/default/objects/Indurty__c/fields/My_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>My_Time_Formula__c</fullName>
    <formula>Date(Year(DATEVALUE(&quot;1996-5-1&quot;)),Month(DATEVALUE(&quot;1996-5-1&quot;)),day(DATEVALUE(&quot;1996-5-1&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Time Formula</label>
    <type>Date</type>
</CustomField>