force-app/main/default/objects/Indurty__c/fields/Pick__c.field-meta.xml
<CustomField>
    <fullName>Pick__c</fullName>
    <label>PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New1</fullName>
            </value>
            <value>
                <fullName>New2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>