force-app/main/default/objects/Indurty__c/fields/PickList_Formula__c.field-meta.xml
<CustomField>
    <fullName>PickList_Formula__c</fullName>
    <formula>if(INCLUDES(Area__c ,&quot;Chemicals&quot;),true,if(INCLUDES(Area__c ,&quot;Banking&quot;),true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PickList Formula</label>
    <type>Checkbox</type>
</CustomField>